tests/fixtures/errors/E0804_function_return_width.mimz
// expect: E0804
fn f(a: bits[8]) -> bits[4] { a }
module M {
  out o: bits[4]
  o = f(0)
}
